--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 html, body {
     height: 100%; /* Ensure full viewport height */
     margin: 0; /* Remove default margin */
-    background: url('/images/theHorror.gif') no-repeat center center fixed; /* Set the GIF as background */
+    background: url('images/theHorror.gif') no-repeat center center fixed; /* Set the GIF as background */
     background-size: cover; /* Ensure the background fills the entire viewport */
     z-index: -2; /* Puts the GIF behind the content */
 }
